finish slider popular movies and trending
completed the slider and fetch to get the popular and trending

--- a/src/app/movies-app/grilla/grilla.component.html
+++ b/src/app/movies-app/grilla/grilla.component.html
@@ -1,4 +1,4 @@
-<div class="container-grid">
+<!-- <div class="container-grid">
 
 	<div class="image image1">
 		<img src="https://i.postimg.cc/VsX3RTK5/index.jpg" alt="" srcset="">
@@ -18,9 +18,4 @@
 		<img src="https://i.postimg.cc/m2wKx9fs/pexels-erik-mclean-7809122.jpg" alt="" srcset="">
 	</div>
 	
-
-
-
-
-
-</div>
+</div> -->
