--- a/src/app/movies-app/main-page/main-page.component.html
+++ b/src/app/movies-app/main-page/main-page.component.html
@@ -1,2 +1,4 @@
 <app-navigation></app-navigation>
 <app-grilla></app-grilla>
+<app-slider-popular></app-slider-popular>
+<app-slider-trending></app-slider-trending>
