--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<app-main-page></app-main-page>
+<!-- <app-navigation></app-navigation>
+<app-grilla></app-grilla>
+<app-slider-popular></app-slider-popular>
+<app-slider-trending></app-slider-trending> -->
+<app-navigation></app-navigation>
+<router-outlet></router-outlet>
