--- a/src/app/movies-app/movies/pages/main-page/main-page.component.scss
+++ b/src/app/movies-app/movies/pages/main-page/main-page.component.scss
@@ -2,3 +2,37 @@
 	width: 90%;
 	margin: 0 auto;
 }
+
+.container-recomendation{
+	display: block;
+	width: 100%;
+}
+
+.recomendation{
+	display: flex;
+	align-items: center;
+	padding-left: 10px;
+	width: 100%;
+	height: 35px;
+	border: 1px solid gray;
+	border-radius: 5px;
+
+	&:active{
+		background-color: rgb(201, 220, 250);
+	}
+
+}
+
+.notFound{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 90%;
+	height: 50px;
+	margin: 0 auto;
+	background-color: rgb(211, 146, 146);
+	font-size: 1.1em;
+	border-radius: 5px;
+	border:1px solid rgb(223, 96, 96);
+
+}
